force-app/main/default/objects/Treatment__c/Treatment__c.object-meta.xml
<CustomObject>
    <label>Treatment</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Treatment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Treatments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>