force-app/main/default/objects/Treatment__c/fields/Charge_Master__c.field-meta.xml
<CustomField>
    <fullName>Charge_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charge Master</label>
    <referenceTo>Charge_Master__c</referenceTo>
    <relationshipLabel>Treatments</relationshipLabel>
    <relationshipName>Treatments</relationshipName>
    <type>Lookup</type>
</CustomField>